# aapor_scholars_2021

./: LICENSE  README.md
steam_rev_query/: Cargo.toml
steam_rev_query/rev_query_utils/: Cargo.toml
steam_rev_query/rev_query_utils/src/: error.rs  lib.rs  resumeinfo.rs
steam_rev_query/review_scraper/: Cargo.toml
steam_rev_query/review_scraper/src/: lib.rs  review_scraper.rs  tester.rs
steam_rev_query/scraper_cache/: Cargo.toml
steam_rev_query/scraper_cache/src/: cache.rs  lib.rs
steam_rev_query/src/: arguments.rs  main.rs
steam_rev_query/src/steam_review_api/: buildapi.rs  mod.rs  reviewtype.rs
steam_rev_query/steam_review_api/: Cargo.toml
steam_rev_query/steam_review_api/src/: buildapi.rs  error.rs  language.rs  lib.rs  options.rs
steam_rev_query/steam_review_api/src/convenience_structs/: conv_newtypes.rs  flat_query.rs  mod.rs  query_structs.rs  reviewscore.rs
steam_rev_query/tests/: run_queries.rs
steam_review_sentiments/: cleanup.json  cnn_model.py  main.py  models.py  plots.py  preprocessing.py  utilities.py
