[package]
name = "steam_rev_query"
version = "0.7.0"
authors = ["Joshua Megnauth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["review_scraper", "steam_review_api"]

[dependencies]
steam_review_api = {path = "steam_review_api"}
review_scraper = {path = "review_scraper"}