[package]
name = "steam_rev_query"
version = "0.10.0"
authors = ["Joshua Megnauth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["review_scraper", "scraper_cache", "steam_review_api"]

[dependencies]
anyhow = "^1.0"
review_scraper = {path = "review_scraper"}
scraper_cache = {path = "scraper_cache"}
steam_review_api = {path = "steam_review_api"}