[package]
name = "steam_rev_query"
version = "0.14.0"
authors = ["Joshua Megnauth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rev_query_utils", "review_scraper", "scraper_cache", "steam_review_api"]

[dependencies]
anyhow = "1"
chrono = "0.4.19"
clap = "2.33"
rev_query_utils = {path = "rev_query_utils"}
review_scraper = {path = "review_scraper"}
scraper_cache = {path = "scraper_cache"}
steam_review_api = {path = "steam_review_api"}
tracing = "0.1"
tracing-subscriber = "0.2"
