[package]
name = "review_scraper"
version = "0.3.0"
authors = ["Joshua Megnauth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam_review_api = {path = "../steam_review_api", features = ["convenience_structs"]}
anyhow = "^1.0"
attohttpc = {version = "^0.16.3", features = ["json"]}
serde = {version = "^1.0.124", features = ["derive"]}
serde_json = "^1.0.64"