[package]
name = "scraper_cache"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
csv = "^1.1"
hash_hasher = "^2.0.3"
review_scraper = {path = "../review_scraper"}
serde = {version = "^1.0.124", features = ["derive"]}
steam_review_api = {path = "../steam_review_api", features = ["convenience_structs"]}