[package]
name = "steam_review_api"
version = "0.9.0"
authors = ["Joshua Megnauth"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = {version = "1", features = ["serde"], optional = true}
serde = {version = "1", features = ["derive"], optional = true}
serde_json = {version = "1", optional = true}
url = "2"

[features]
convenience_structs = ["either", "serde", "serde_json"]
